--- a/src/app/protected/planning/planning-workday-list/planning-workday-list.component.html
+++ b/src/app/protected/planning/planning-workday-list/planning-workday-list.component.html
@@ -1,10 +1,8 @@
-<div class="row">
+<div *ngIf="workdays" class="row">
     <al-planning-workday-item
-      *ngFor="let workday of workdays$ | async"
-      [dueDate]="workday.dueDate"
-      [doneTasks]="workday.doneTasks"
-      [remainingTasks]="workday.remainingTasks"
-      (workdayRemoved)="onWorkdayRemoved($event)"
-      class="col-md-4">
+      *ngFor="let workday of workdays"
+      [workday]="workday"
+      (workDayRemoved)="onWorkdayRemoved(workday)"
+      class="col-md-4 d-flex">
     </al-planning-workday-item>
-   </div>
+  </div>
