--- a/src/app/protected/workday/workday-form-tasks-item/workday-form-tasks-item.component.html
+++ b/src/app/protected/workday/workday-form-tasks-item/workday-form-tasks-item.component.html
@@ -1,9 +1,60 @@
-<div [formGroup]="task" class="form-group row">
+<div
+    [formGroup]="task"
+    class="form-group row"
+    class="form-group row"
+>
+    <legend *ngIf="isFirst">Tâche la plus importante</legend>
+    <legend *ngIf="index === 1">Tâches de seconde importance</legend>
+    <legend *ngIf="index === 3">Tâches additionnelles</legend>
+    <label class="col-sm-1 col-form-label px-0">{{index + 1}}.</label>
     <div class="col-sm-6 px-0">
-        <input formControlName="title" type="text" class="form-control">
+        <input
+            type="text"
+            class="form-control"
+            formControlName="title"
+            placeholder="Entrez le titre"
+        >
     </div>
     <div class="col-sm-5">
-        <span *ngIf="isLast && !isFirst" (click)="removeTask(index)">
+        <div
+            class="py-2 mb-0"
+            dropdown
+        >
+            <!-- Pomodoros -->
+            <input
+                dropdownToggle
+                aria-controls="dropdown-todo"
+                class="text-center mb-3 mr-1 pomodoro-input"
+                formControlName="todo"
+            >
+
+            <ul
+                id="dropdown-todo"
+                *dropdownMenu
+                class="dropdown-menu"
+                role="menu"
+                aria-labelledby="button-basic"
+            >
+                <li
+                    role="menuitem"
+                    *ngFor="let todo of [1,2,3,4,5]"
+                >
+                    <span
+                        class="dropdown-item"
+                        (click)="selectTodo(todo)"
+                    >
+                        {{ todo }}
+                    </span>
+                </li>
+            </ul>
+            ...
+        </div>
+    </div>
+    <div class="col-sm-5">
+        <span
+            *ngIf="isLast && !isFirst"
+            (click)="removeTask(index)"
+        >
             <i class="material-icons md-18 md-grey align-middle">clear</i>
         </span>
     </div>
